<resources>
    <string name="app_name">FOHOR MALAI</string>
    <string name="description">A Waste Management App with the use of IoT</string>
    <string name="schedule">PickUp Schedule</string>
    <string name="notification">SMS Notification</string>
    <string name="bin">SmartBin Implementation</string>
    <string name="register">Register</string>
    <string name="signIn">Sign In</string>
    <string name="power">Powered by</string>
    <string name="group_name">Clustered Concepts</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Mobile Number</string>
    <string name="member">Already a member? |</string>
    <string name="to_login">Please login here</string>
    <string name="notMember">Not a member yet?</string>
    <string name="to_register">Please register here</string>
    <string name="get_start">Get Started</string>
    <string name="new_user">I am new here</string>
    <string name="old_user">I have an account</string>

    <string-array name="State">
        <item>Select your State...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="Zone">
        <item>Select your Zone...</item>
        <item>Bagmati</item>
        <item>Lumbini</item>
        <item>Gandaki</item>
    </string-array>

    <string-array name="District">
        <item>Select your District...</item>
        <item>Kathmandu</item>
        <item>Bhaktapur</item>
        <item>lalitpur</item>
    </string-array>

    <string-array name="Municipality">
        <item>Select your Municipality...</item>
        <item>Madhyapur Thimi</item>
        <item>Bhaktapur</item>
        <item>Surya-Vinayak</item>
        <item>ChanguNarayan</item>
    </string-array>

    <string-array name="WardNo">
        <item>Select your Ward No...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="text_with_paragraph1">
                Our project is entitled “FOHOR MALAI”. Our software is basically related to waste management through the use of IoT. Waste management or waste disposal are all the activities and actions required to manage waste from its inception to its final disposal. This includes amongst other things collection, transport, treatment and disposal of waste together with monitoring and regulation.
                Our software provides scheduling for the pickup of household waste materials which makes it easy for the users to optimize their valuable time. This software has a notification system which alerts the users about the time when the garbage truck is available for household waste pickup. Along with it, we have incorporated IoT (Internet of Things) which is a sensor attached to the dustbin, known as Smart Bin. This sensor provides the information about the status of the bin. When the bin is full, the information is sent to the system.
    </string>

    <string name="text_with_paragraph2">
                 \u2022	To provide scheduling for the collection of household waste materials.\n
                 \u2022	To provide SMS notification about the waste collection   time schedule.\n
                 \u2022	Resource mobilization.\n
                 \u2022	To implement Smart Dustbin system using IoT.\n
    </string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_others">Others</string>
</resources>
