<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:id="@+id/scrollView2"
    android:background="@color/white"
    android:layout_below="@+id/appLogo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@mipmap/app_logo"
        android:id="@+id/appLogo"
        android:scaleType="fitCenter"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/trans_bg"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_start"
                android:id="@+id/textView"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/full_name"
                android:textSize="16sp"
                android:id="@+id/fullName"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/user"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/phoneNumber"
                android:textSize="16sp"
                android:id="@+id/number"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:textSize="16sp"
                android:id="@+id/emailID"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Password"
                android:textSize="16sp"
                android:id="@+id/password"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Confirm Password"
                android:textSize="16sp"
                android:id="@+id/confPassword"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/conf_password"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:text="@string/register"
                android:background="@drawable/button"
                android:id="@+id/btn_register2"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/member"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/to_login"
            android:textSize="16sp"
            android:textColor="@color/blue"
            />
       </LinearLayout>
    </LinearLayout>
</ScrollView>

