<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="ContentDescription"
    tools:context=".MainActivity_Second">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@mipmap/app_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:id="@+id/layout1"
        android:layout_below="@+id/logo1">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right_sign"
            android:id="@+id/right1"
            />

        <TextView
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right_sign"
            android:id="@+id/right2"
            />

        <TextView
            android:id="@+id/SMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:id="@+id/layout3"
        android:layout_below="@+id/layout2">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right_sign"
            android:id="@+id/right3"
            />

        <TextView
            android:id="@+id/SmartBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:text="WELCOME"
        android:textSize="50sp"
        android:textColor="#5C9C36"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/new_user"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/old_user"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>