<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@mipmap/app_logo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
       />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/appLogo">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:background="@drawable/trans_bg"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Account Login"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:id="@+id/accLogin"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:textSize="16sp"
                android:id="@+id/emailID"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="15dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Password"
                android:textSize="16sp"
                android:id="@+id/passID"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:text="@string/signIn"
                android:background="@drawable/button"
                android:id="@+id/btn_signIn"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="75dp">

        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/notMember"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/to_register"
            android:textSize="16sp"
            android:textColor="@color/blue"
            />
    </LinearLayout>

</RelativeLayout>